# ASE-final-project

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  GITHUB_PROJECTS.md  README.md  vercel.json
.github/workflows/: bump-version-tag.yml  cross-platform-ci.yml  release.yml
Source/: CMakeLists.txt
Source/Audio/: CMakeLists.txt  ParameterSnapshot.cpp  ParameterSnapshot.h  SynthEngine.cpp  SynthEngine.h  SynthSound.cpp  SynthSound.h  SynthVoice.cpp  SynthVoice.h  VoiceManager.cpp  VoiceManager.h
Source/DSP/: AmpEnvelope.cpp  AmpEnvelope.h  CMakeLists.txt  DualFilter.cpp  DualFilter.h  FastMath.h  Oscillator.cpp  Oscillator.h  TrilinearMixer8.cpp  TrilinearMixer8.h  UnisonOscillator.cpp  UnisonOscillator.h  WavetableBank.cpp  WavetableBank.h  WavetableOscillator.cpp  WavetableOscillator.h
Source/IO/: CMakeLists.txt  MidiManager.cpp  MidiManager.h
Source/Parameters/: CMakeLists.txt  ParameterCorners.h  ParameterIDs.h  ParameterLayout.h  ParameterManager.cpp  ParameterManager.h
Source/Plugin/: CMakeLists.txt  VolumetricSynthAudioProcessor.cpp  VolumetricSynthAudioProcessor.h  VolumetricSynthEditor.cpp  VolumetricSynthEditor.h
Source/Threading/: AtomicGuiState.cpp  AtomicGuiState.h  CMakeLists.txt
Source/UI/: AmpEnvelopeSection.cpp  AmpEnvelopeSection.h  CMakeLists.txt  CenterControlPanel.cpp  CenterControlPanel.h  CursorJoystick2D.cpp  CursorJoystick2D.h  (+18 more)
Tests/: CMakeLists.txt  HOW_TO_USE_TESTS.md  Main.cpp
Tests/UnitTests/: AssertionsTest.cpp  AtomicGuiStateTest.cpp  AudioTests.cpp  DualFilterTest.cpp  Math3DTest.cpp  SampleTest.cpp  ScopedDenormalsTest.cpp  TrilinearMixer8Test.cpp
web/: .gitignore  package-lock.json  package.json
(+111 files in other folders)
